fix: remove old spring_micro application classes after package rename

--- a/pdf-converter/build.gradle
+++ b/pdf-converter/build.gradle
@@ -36,5 +36,5 @@ dependencyManagement {
 }
 
 tasks.named("bootJar") {
-    mainClass = "spring_micro.pdf_converter.PdfConverterApplication"
+    mainClass = "fileconverter.pdfconverter.PdfConverterApplication"
 }
