--- a/flow-manager/build.gradle
+++ b/flow-manager/build.gradle
@@ -37,5 +37,5 @@ dependencyManagement {
 }
 
 tasks.named('bootJar') {
-    mainClass = 'spring_micro.flow_manager.FlowManagerApplication'
+    mainClass = 'fileconverter.flowmanager.FlowManagerApplication'
 }
