--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,13 @@ services:
     volumes:
       - minio-data:/data
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
   # PostgreSQL
   postgres:
     image: postgres:14
@@ -120,6 +127,37 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
+  subscription-service:
+    build:
+      context: .
+      dockerfile: ../subscription-service/Dockerfile
+    ports:
+      - "8085:8085"
+    depends_on:
+      - eureka-server
+      - postgres
+      - redis
+      - kafka
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8081/eureka/
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/subsdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_REDIS_HOST: redis
+      SPRING_KAFKA_BOOTSTRAPSERVERS: kafka:9092
+
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      - postgres
+
 volumes:
   minio-data:
   postgres-data:
+  redis-data:
