--- a/flow-manager/build.gradle
+++ b/flow-manager/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.6.2'
+    id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -28,11 +28,14 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 }
 
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.0'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.0'
     }
 }
 
